--- a/index.html
+++ b/index.html
@@ -4,7 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <script src="script/initial.js" defer></script>
+    <title>Muthukumaran M</title>
   </head>
-  <body></body>
+  <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__label">
+        <span class="navigation__icon"></span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Technical Skills</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Key Skills</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Education & Work Experience</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Projects</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Achievements</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Certifications</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
